--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,40 @@ home page</a>.
 
 <dl>
 
+<dt><b>March 22, 2000</b></dt>
+<dd>
+The Steering Committee has appointed Mark Mitchell, of <a
+href="http://www.codesourcery.com">CodeSourcery, LLC</a>, to manage the
+GCC 3.0 release and as a new Steering Committe member.
+CodeSourcery will be providing time from Mark, Alex Samuel, and other
+personnel, to manage the release.  Thanks!
+<p>
+The Steering Committee and the GCC community owe Jeff Law an immense
+debt for his work as release manager for the EGCS 1.0.x, 1.1.x, and
+GCC 2.95.x series of releases.  He has done an outstanding job.
+</dd>
+
+<dt><b>March 18, 2000</b></dt>
+<dd>
+Andy Vaught has started work on GNU Fortran 95, the Fortran
+Frontend destined to implement the latest standard.  See
+<a href="http://g95.sourceforge.net/">this page</a> for its current
+status (previously over <a href="http://xena.eas.asu.edu/~andy/">here</a>).
+</dd>
+
+<dt><b>March 17, 2000</b></dt>
+<dd>
+Jim Wilson and Richard Henderson of Cygnus, a Red Hat company, and
+David Mosberger of HP labs have
+contributed a port for the Intel Itanium (aka IA-64) processor.
+<br><br>
+Jeff Law and Richard Henderson of Cygnus, a Red Hat company, have contributed
+RTL based tail call elimination optimizations.  Support currently exists for
+the Alpha, HPPA, ia32 and MIPS processors.  Long term the RTL based
+tail call optimizations will be replaced with a tree based tail call
+optimizer.
+</dd>
+
 <dt><b>March 14, 2000</b></dt>
 <dd>
 CodeSourcery, LLC is now providing nightly <a
