Some more updates. By "Joseph S. Myers" <jsm28@cam.ac.uk>.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -10,6 +10,10 @@
 <p>This table is based on the list in the foreword to the FDIS plus
 N894.</p>
 
+<p>Where "Library Issue" is listed in conjunction with some other
+status, this means that some compiler support is needed for the
+library support, or desirable in conjunction with it.</p>
+
 <table border>
 <tr><th>Feature</th>
     <th>Library Issue</th>
@@ -26,7 +30,7 @@ N894.</p>
 
 <tr><td><em>wchar.h and wctype.h</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td></td><td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>more precise aliasing rules via effective type</em></td>
@@ -61,7 +65,7 @@ N894.</p>
 
 <tr><td><em>tgmath.h</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td>Done</td><td></td><td></td><td></td>
 </tr>
 
 <tr><td><em>long long</em></td>
@@ -76,7 +80,7 @@ N894.</p>
 
 <tr><td><em>additional floating-point characteristics in float.h</em></td>
     <td></td><td></td>
-    <td></td><td></td><td>Unknown</td>
+    <td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>removed implicit int</em></td>
@@ -85,7 +89,7 @@ N894.</p>
 </tr>
 
 <tr><td><em>reliable integer divisions</em></td>
-    <td></td><td></td><td></td><td></td><td>Unknown</td>
+    <td></td><td>Done</td><td></td><td></td><td></td>
 </tr>
 
 <tr><td><em>UCS names</em></td>
@@ -161,12 +165,12 @@ N894.</p>
 
 <tr><td><em>vscanf</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td></td><td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>additional math library functions</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td></td><td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>floating-point environment access<br>in fenv.h</em></td>
@@ -184,7 +188,7 @@ N894.</p>
 </tr>
 
 <tr><td><em>%lf conversion specifier<br>allowed in printf</em></td>
-    <td></td><td></td><td></td><td></td><td>Unknown</td>
+    <td>Library Issue</td><td></td><td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>inline functions</em></td>
@@ -194,7 +198,7 @@ N894.</p>
 
 <tr><td><em>snprintf</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td></td><td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>boolean type in stdbool.h</em></td>
