--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -22,34 +22,10 @@ instead of features.
 
 <p>The new version of the C standard (ISO/IEC 9899:1999) requires a
 number of library changes; these have to be provided by the C library,
-and not by gcc. A <a href="c99status.html">short overview</a> of the C99
-implementation status is available as well.</p>
-
-<p>Some gcc changes are already available in gcc as extensions, but
-don't quite work:
-<ul>
-  <li>complex numbers support is currently broken
-  <li>C99 inline implies static
-  <li>VLA (variable length arrays) differ from the GCC extension (what
-      difference)?
-  <li>__func__ is not quite the same as GCC's __FUNCTION__
-  <li>compound array initialization does not support variables
-  <li>under -pedantic, some correct code is rejected (e.g. [0] array members)
-</ul></p>
-
-<p>There is a number of preprocessor changes, which need to be
-implemented both for cccp, and <a href="proj-cpplib.html">cpplib</a>:
-<ul>
-  <li>_Pragma special token
-</ul></p>
-
-<p>A number of features is missing in the compiler proper:
-<ul>
-  <li>mixed declarations and statements are not supported
-  <li>various formatting characters are not known in printf/strftime (still?)
-  <li>support for universal characters
-  <li>standard pragmas
-</ul></p>
+and not by gcc.  In addition, there are also changes to the language
+proper, and some compiler support is needed for the new library
+features.  An <a href="c99status.html">overview</a> of the C99
+implementation status is available.</p>
 
 <h2>Haifa scheduler</h2> (haifa-sched.c, loop.[ch], unroll.[ch], genattrtab.c):
 (contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> before
