--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -27,16 +27,21 @@ number is maintained.</p>
 
 <table border>
 <tr><th>Release Name</th><th>Version number</th><th>Release date<th></tr>
-<tr><td>EGCS 1.0.0</td><td>2.90.21</td><td>December 3, 1997</td></tr>
-<tr><td>EGCS 1.0.1</td><td>2.90.23</td><td>January 6, 1998</td></tr>
-<tr><td>EGCS 1.0.2</td><td>2.90.27</td><td>March 16, 1998</td></tr>
-<tr><td>EGCS 1.0.3</td><td>2.90.29</td><td>May 15, 1998</td></tr>
-<tr><td>EGCS 1.1.0</td><td>2.91.57</td><td>September 3, 1998</td></tr>
-<tr><td>EGCS 1.1.1</td><td>2.91.60</td><td>December 1, 1998</td></tr>
+<tr><td>GCC 2.95.2</td><td>2.95.2</td> <td>October 24, 1999</td></tr>
+<tr><td>GCC 2.95.1</td><td>2.95.1</td> <td>August 19, 1999</td></tr>
+<tr><td>GCC 2.95</td>  <td>2.95</td>   <td>July 31, 1999</td></tr>
 <tr><td>EGCS 1.1.2</td><td>2.91.66</td><td>March 15, 1999</td></tr>
-<tr><td>GCC 2.95</td><td>2.95</td><td>July 31, 1999</td></tr>
-<tr><td>GCC 2.95.1</td><td>2.95.1</td><td>August 19, 1999</td></tr>
-<tr><td>GCC 2.95.2</td><td>2.95.2</td><td>October 24, 1999</td></tr>
+<tr><td>EGCS 1.1.1</td><td>2.91.60</td><td>December 1, 1998</td></tr>
+<tr><td>EGCS 1.1.0</td><td>2.91.57</td><td>September 3, 1998</td></tr>
+<tr><td>EGCS 1.0.3</td><td>2.90.29</td><td>May 15, 1998</td></tr>
+<tr><td>EGCS 1.0.2</td><td>2.90.27</td><td>March 16, 1998</td></tr>
+<tr><td>gcc 2.8.1</td> <td></td>       <td>March 2, 1998</td></tr>
+<tr><td>gcc 2.8.0</td> <td></td>       <td>January 7, 1998</td></tr>
+<tr><td>EGCS 1.0.1</td><td>2.90.23</td><td>January 6, 1998</td></tr>
+<tr><td>EGCS 1.0.0</td><td>2.90.21</td><td>December 3, 1997</td></tr>
+<tr><td>gcc 2.7.2</td> <td></td>       <td>November 26, 1995</td></tr>
+<tr><td>gcc 2.7.1</td> <td></td>       <td>November 12, 1995</td></tr>
+<tr><td>gcc 2.7.0</td> <td></td>       <td>June 16, 1995</td></tr>
 </table>
 
 </body>
