--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -73,6 +73,11 @@ be completed before GCC 3.0 is released:
 <li><p>Open Bugs</p>
     <p>High-priority open bugs in GNATs will be fixed before the
        GCC 3.0 release.</p>
+<li><p>Installation Documentation</p>
+    <p>Merge <a href="http://gcc.gnu.org/install">on-line installation
+       documentation</a>, <code>gcc/INSTALL</code>, and <a
+       href="http://gcc.gnu.org/onlinedocs/gcc_3.html#SEC50">some more
+       on-line installation documentation</a>.</p>
 </ul>
 
 <h2>Platform Support</h2>
@@ -125,7 +130,7 @@ answering questions and reviewing patches as time permits.</p>
 <tr><td>SPARC    <td>SunOS 4.1.4     <td>sparc-sun-sunos4.1.4
 <tr><td>SPARC    <td>RedHat Linux 6.2<td>
 <tr><td>ARM      <td>Linux           <td>
-<tr><td>Intel x86<td>Cygwin          <td>i586-pc-cygwin
+<tr><td>Intel x86<td>Cygwin          <td>i686-pc-cygwin
 </table>
 
 <h2>Language Support</h2>
@@ -158,12 +163,13 @@ available.</p>
 <h2>Regression Tests</h2>
 
 <p>The GCC testsuite contains extensive C and C++ regression tests, as
-well as some Fortran, and Objective-C tests.  GCC 3.0 will not
-fail any of these tests which the previous release GCC passed on any
-of the supported platforms.  In particular, the current regression
-testsuite will be run using GCC 2.95.2 on each of the supported
-platforms; those results can then be compared with the output from a
-release candidate.</p>
+well as some Fortran, and Objective-C tests.  GCC 3.0 will not fail
+any of these tests which the previous release GCC passed on any of the
+supported platforms.  In particular, the current regression testsuite
+will be run using GCC 2.95.2 on each of the supported platforms; those
+results can then be compared with the output from a release candidate.
+Becuase there have often been issues with generating PIC code, we will
+test with <code>-fPIC</code> as well.</p>
 
 <p>In addition, on all supported platforms, there will be no
 <code>--enable-checking</code> failures when running any of the
