Remove the "unknown" column, which is not needed any longer. By Joseph S. Myers <jsm28@cam.ac.uk>.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -22,257 +22,247 @@ library support, or desirable in conjunction with it.</p>
     <th>Done</th>
     <th>Broken</th>
     <th>Missing</th>
-    <th>Unknown</th>
 </tr>
 
 <tr><td><em>digraphs and iso646.h</em></td>
     <td></td>
-    <td>Done</td><td></td><td></td><td></td>
+    <td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>wchar.h and wctype.h</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>more precise aliasing rules via effective type</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>restricted pointers</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>variable-length arrays</em></td>
     <td></td><td></td><td>Broken</td>
-    <td></td><td></td>
+    <td></td>
 </tr>
 
 <tr><td><em>flexible array members</em></td>
     <td></td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>static and type qualifiers in parameter array declarators</em></td>
     <td></td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>complex</em></td>
     <td></td><td></td><td>Broken</td>
-    <td></td><td></td>
+    <td></td>
 </tr>
 
 <tr><td><em>tgmath.h</em></td>
     <td>Library Issue</td>
-    <td>Done</td><td></td><td></td><td></td>
+    <td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>long long</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>increased limits</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>additional floating-point characteristics in float.h</em></td>
     <td></td><td></td>
-    <td></td><td>Missing</td><td></td>
+    <td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>removed implicit int</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>reliable integer divisions</em></td>
-    <td></td><td>Done</td><td></td><td></td><td></td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>UCS names</em></td>
     <td></td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>extended identifiers</em></td>
-    <td></td><td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>binary floating point literals +<br>printf support</em></td>
     <td>Library Issue</td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>compound literals</em></td>
     <td></td><td></td><td>Broken</td>
-    <td></td><td></td>
+    <td></td>
 </tr>
 
 <tr><td><em>designated initializers</em></td>
     <td></td><td></td><td>Broken</td>
-    <td></td><td></td>
+    <td></td>
 </tr>
 
 <tr><td><em>//comments</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>inttypes.h</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td></td><td></td><td></td>
 </tr>
 
 <tr><td><em>stdint.h</em></td>
     <td></td>
-    <td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>remove implicit function declaration</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>preprocessor arithmetic<br>done in intmax_t/uintmax_t</em></td>
-    <td></td><td></td><td>Broken</td><td></td><td></td>
+    <td></td><td></td><td>Broken</td><td></td>
 </tr>
 
 <tr><td><em>mixed declarations and code</em></td>
     <td></td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>new block scopes for selection and iteration statements</em></td>
     <td></td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>integer constant type rules</em></td>
-    <td></td><td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>integer promotion rules</em></td>
-    <td></td><td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>vararg macros</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>vscanf</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>additional math library functions</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>floating-point environment access<br>in fenv.h</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td></td><td></td><td></td>
 </tr>
 
 <tr><td><em>IEC 60559</em></td>
-    <td></td><td></td><td>Broken</td><td></td><td></td>
+    <td></td><td></td><td>Broken</td><td></td>
 </tr>
 
 <tr><td><em>trailing comma allowed in enum declaration</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>%lf conversion specifier<br>allowed in printf</em></td>
-    <td>Library Issue</td><td></td><td></td><td>Missing</td><td></td>
+    <td>Library Issue</td><td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>inline functions</em></td>
     <td></td><td></td><td>Broken</td>
-    <td></td><td></td>
+    <td></td>
 </tr>
 
 <tr><td><em>snprintf</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td>Missing</td><td></td>
+    <td></td><td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>boolean type in stdbool.h</em></td>
     <td></td>
-    <td></td><td>Broken</td><td></td><td></td>
+    <td></td><td>Broken</td><td></td>
 </tr>
 
 <tr><td><em>idempotent type qualifiers</em></td>
-    <td></td><td>Done</td><td></td><td></td><td></td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>empty macro arguments</em></td>
-    <td></td><td>Done</td><td></td><td></td><td></td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>new struct type compatibility<br>rules (tag compatibility)</em></td>
-    <td></td><td>Done</td><td></td><td></td><td></td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>_Pragma preprocessing operator</em></td>
     <td></td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>standard pragmas</em></td>
     <td></td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>__func__ predefined identifier</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>va_copy macro</em></td>
     <td></td><td>Done</td><td></td><td></td>
-    <td></td>
 </tr>
 
 <tr><td><em>additional strftime conversion specifiers</em></td>
     <td>Library Issue</td><td></td><td></td><td>Missing</td>
-    <td></td>
 </tr>
 
 <tr><td><em>deprecate ungetc at the<br>beginning of a binary file</em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td></td><td></td>
+    <td></td><td></td><td></td>
 </tr>
 
 <tr><td><em>remove deprecation of<br>aliased array parameters</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><td><em>conversion of non-lvalue array to pointer</em></td>
     <td></td><td></td>
-    <td></td><td>Missing</td><td></td>
+    <td></td><td>Missing</td>
 </tr>
 
 <tr><td><em>relaxed constraints on aggregate<br>and union initialization</em></td>
     <td></td><td></td>
-    <td>Broken</td><td></td><td></td>
+    <td>Broken</td><td></td>
 </tr>
 
 <tr><td><em>relaxed restrictions on portable header names</em></td>
     <td></td><td></td>
-    <td>Broken</td><td></td><td></td>
+    <td>Broken</td><td></td>
 </tr>
 
 <tr><td><em>return without expression not permitted in<br>function that returns a value</em></td>
     <td></td><td>Done</td>
-    <td></td><td></td><td></td>
+    <td></td><td></td>
 </tr>
 
 <tr><th>Feature</th>
@@ -280,7 +270,6 @@ library support, or desirable in conjunction with it.</p>
     <th>Done</th>
     <th>Broken</th>
     <th>Missing</th>
-    <th>Unknown</th>
 </tr>
 </table>
 
