* done.html: Added note about PAL.
	* mail.html: Added java-cvs.

--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -80,6 +80,10 @@ below to view the archives.
 <dd>
    Notification of new Problem Reports (PRs).
 </dd>
+<dt><b>java-cvs</b></dt>
+<dd>
+   Notification of CVS commits.  This list is not archived.
+</dd>
 </dl>
 
 <p>
@@ -115,6 +119,7 @@ of these lists:
    <option value="java-patches">java-patches
    <option value="java-testresults">java-testresults
    <option value="java-prs">java-prs
+   <option value="java-cvs">java-cvs
   </select>
   <tt>&nbsp;</tt>
   <br>
@@ -144,7 +149,7 @@ see our <a href="/ml/#faqs">mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.6 2000/06/28 04:54:21 apbianco Exp $
+$Id: mail.html,v 1.7 2000/07/05 06:08:53 kingdon Exp $
 </small>
 </address>
 
