--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -76,6 +76,25 @@
 	</td>
       </tr>       
       <!-- End Autonomous Haulage -->
+      <!-- PAL -->
+      <tr valign=top>
+        <td><B>PAL</B></td>
+
+	<td>PAL is a Java library for use in molecular evolution and
+	    phylogenetics.  Basically, PAL includes classes and
+	    methods for computationally intensive statistics that are
+	    useful for the analysis of DNA sequences.<p>
+
+	    The upcoming new release of PAL 1.0 (20.7.00) consists of
+	    111 classes in 12 packages with more than 20,000 lines of
+	    code, all of which compiles nicely into native code using
+	    GCJ.
+	</td>
+
+	<td><a href="http://www.pal-project.org/">The PAL Project</a>
+	    submitted by <a href="mailto:korbinian.strimmer@zoology.oxford.ac.uk>Korbinian Strimmer</a>.
+      </tr>
+      <!-- End PAL -->
       <!-- Swarm -->
       <tr valign=top>
         <td><B>Swarm</B></td>
@@ -103,7 +122,7 @@
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.3 2000/06/29 02:43:43 apbianco Exp $ </small></address>
+<small> $Id: done.html,v 1.4 2000/07/05 06:07:23 kingdon Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
