* done.html: Fix missing tag.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -92,7 +92,8 @@
 	</td>
 
 	<td><a href="http://www.pal-project.org/">The PAL Project</a>
-	    submitted by <a href="mailto:korbinian.strimmer@zoology.oxford.ac.uk>Korbinian Strimmer</a>.
+	    submitted by <a href="mailto:korbinian.strimmer@zoology.oxford.ac.uk">Korbinian Strimmer</a>.
+	</td>
       </tr>
       <!-- End PAL -->
       <!-- Swarm -->
@@ -122,7 +123,7 @@
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.4 2000/07/05 06:07:23 kingdon Exp $ </small></address>
+<small> $Id: done.html,v 1.5 2000/07/19 12:25:59 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
