* mail.html: four -> some.

--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -55,7 +55,7 @@ i
 </table>
 <br>
 
-We have four gcj specific mailing lists set up.  Click on the links
+We have some gcj specific mailing lists set up.  Click on the links
 below to view the archives.
 
 <dl>
@@ -149,7 +149,7 @@ see our <a href="/ml/#faqs">mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.7 2000/07/05 06:08:53 kingdon Exp $
+$Id: mail.html,v 1.8 2000/07/19 12:25:59 tromey Exp $
 </small>
 </address>
 
