Update link according to the recent merger of releases.html and timeline.html.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,7 +13,7 @@
 <P>
 <A HREF="gccmission.html">Mission Statement</A><BR>
 <A HREF="lists.html">Mailing lists</A><BR>
-<A HREF="timeline.html">Timeline</A><BR>
+<A HREF="releases.html#timeline">Timeline</A><BR>
 <A HREF="thanks.html">Contributors</A><BR>
 <A HREF="steering.html">Steering Committee</A><BR>
 </P>
