Refer to our binaries page. By Kelley Cook <kelley.cook@gm.com> with minor tweaks.

--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -15,6 +15,9 @@ we also make releases available for FTP download.</p>
 <a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/releases/index.html">main
 mirror site</a> or any of our other <a href="mirrors.html">mirrors</a>.</p>
 
+<p>If you are looking for pre-compiled binaries for various platforms, please
+refer to our <a href="install/binaries.html">binaries page</a>.</p>
+
 <h2><a name="timeline">Timeline</a></h2> 
 
 <p>The egcs project maintained two kinds of version numbers. One was of the
