--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -70,6 +70,9 @@ Successful
 <p><b>hppa1.1-hp-hpux10.01</b><br>
 Successful
 
+<p><b>hppa1.1-hp-hpux10.10</b><br>
+Successful
+
 <p><b>hppa1.1-hp-hpux10.20</b><br>
 Successful
 
