Add d30v, mcore references. By RodneyBrown <RodneyBrown@pmsc.com>.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -95,6 +95,10 @@ tahoe. These are listed here just for completeness.
  <li>convex (c1, c2, c3[248])
    <br>Manufacturer: <a href="http://www.convex.com/">Convex (HP)</a>
 
+ <li>d30v
+  <br>Manufacturer: <a href="http://www.mitsubishi.com">Mitsubishi</a>
+  <br>GDB includes a simulator.
+
  <li>dsp16xx
    <br>Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
 
@@ -141,6 +145,7 @@ tahoe. These are listed here just for completeness.
  <li>m32r
   <br>Manufacturer: <a href="http://www.mitsubishi.com">Mitsubishi</a>
   <br><a href="http://www.mitsubishichips.com/products/mcu/products/32-bit/index.html">M32R/D Site</a>
+  <br>GDB includes a simulator.
 
  <li>m68k
   <br>Manufacturer: <a href="http://www.motorola.com">Motorola</a>
@@ -149,6 +154,11 @@ tahoe. These are listed here just for completeness.
 
  <li>m88k
   <br>Manufacturer: <a href="http://www.motorola.com">Motorola</a>
+
+ <li>mcore
+  <br>Manufacturer: <a href="http://www.motorola.com">Motorola</a>
+  <br><a href="http://www.motorola.com/SPS/MCORE/">M-CORE home page</a>
+  <br>GDB includes a simulator.
 
  <li>mips (mipsel, mips64, mips64el)
   <br>The *el variants are little-endian configurations.
@@ -211,6 +221,7 @@ tahoe. These are listed here just for completeness.
   <br>Manufacturer: <a href="http://www.hitachi.com">Hitachi</a>
   <br>Exact chip name: SuperH
   <br><a href="http://semiconductor.hitachi.com/superh/">SuperH Home Page</a>
+  <br>GDB includes a simulator.
 
  <li>sparc (sparclite, sparc64)
   <br>Manufacturer: <a href="http://www.sun.com">Sun</a>
