--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -28,8 +28,9 @@ opposed to development snapshots).</p>
 <p> After the April 1999 merger between GCC and EGCS, only a single version
 number is maintained.</p>
 
-<table border>
-<tr><th>Release Name</th><th>Version number</th><th>Release date<th></tr>
+<table border=1 cellspacing=0 cellpadding=5>
+<tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
+
 <tr><td>GCC 2.95.2</td><td>2.95.2</td> <td>October 24, 1999</td></tr>
 <tr><td>GCC 2.95.1</td><td>2.95.1</td> <td>August 19, 1999</td></tr>
 <tr><td>GCC 2.95</td>  <td>2.95</td>   <td>July 31, 1999</td></tr>
@@ -38,13 +39,94 @@ number is maintained.</p>
 <tr><td>EGCS 1.1.0</td><td>2.91.57</td><td>September 3, 1998</td></tr>
 <tr><td>EGCS 1.0.3</td><td>2.90.29</td><td>May 15, 1998</td></tr>
 <tr><td>EGCS 1.0.2</td><td>2.90.27</td><td>March 16, 1998</td></tr>
-<tr><td>gcc 2.8.1</td> <td></td>       <td>March 2, 1998</td></tr>
-<tr><td>gcc 2.8.0</td> <td></td>       <td>January 7, 1998</td></tr>
 <tr><td>EGCS 1.0.1</td><td>2.90.23</td><td>January 6, 1998</td></tr>
 <tr><td>EGCS 1.0.0</td><td>2.90.21</td><td>December 3, 1997</td></tr>
-<tr><td>gcc 2.7.2</td> <td></td>       <td>November 26, 1995</td></tr>
-<tr><td>gcc 2.7.1</td> <td></td>       <td>November 12, 1995</td></tr>
-<tr><td>gcc 2.7.0</td> <td></td>       <td>June 16, 1995</td></tr>
+
+</table>
+
+<h2><a name="historical">Historical</a></h2>
+
+<p>If you have evidence for a missing release date, please send it in.
+Numbers in parens are EGCS release numbers. </p>
+
+<table border=1 cellspacing=0 cellpadding=5>
+<tr><th>GCC Version</th><th>Release date</th></tr>
+
+<tr><td>2.95.2</td> <td>October 24, 1999</td></tr>
+<tr><td>2.95.1</td> <td>August 19, 1999</td></tr>
+<tr><td>2.95</td>   <td>July 31, 1999</td></tr>
+
+<tr><td>2.91.66 (1.1.2)</td><td>March 15, 1999</td></tr>
+<tr><td>2.91.60 (1.1.1)</td><td>December 1, 1998</td></tr>
+<tr><td>2.91.57 (1.1.0)</td><td>September 3, 1998</td></tr>
+<tr><td>2.90.29 (1.0.3)</td><td>May 15, 1998</td></tr>
+<tr><td>2.90.27 (1.0.2)</td><td>March 16, 1998</td></tr>
+<tr><td>2.90.23 (1.0.1)</td><td>January 6, 1998</td></tr>
+<tr><td>2.90.21 (1.0.0)</td><td>December 3, 1997</td></tr>
+
+<tr><td>2.8.1</td><td>March 2, 1998</td></tr>
+<tr><td>2.8.0</td><td>January 7, 1998</td></tr>
+
+<tr><td>2.7.2.1</td><td>July 24, 1996</td></tr>
+<tr><td>2.7.2</td><td>November 26, 1995</td></tr>
+<tr><td>2.7.1</td><td>November 12, 1995</td></tr>
+<tr><td>2.7.0</td><td>June 16, 1995</td></tr>
+
+<tr><td>2.6.3</td><td>November 30, 1994</td></tr>
+<tr><td>2.6.2</td><td>November 12, 1994</td></tr>
+<tr><td>2.6.1</td><td>November 1, 1994</td></tr>
+<tr><td>2.6.0</td><td>July 14, 1994</td></tr>
+
+<tr><td>2.5.7</td><td>December 12, 1993</td></tr>
+<tr><td>2.5.6</td><td>December 3, 1993</td></tr>
+<tr><td>2.5.5</td><td>November 27, 1993</td></tr>
+<tr><td>2.5.4</td><td>November 16, 1993</td></tr>
+<tr><td>2.5.3</td><td>November 11, 1993</td></tr>
+<tr><td>2.5.2</td><td>November 1, 1993</td></tr>
+<tr><td>2.5.1</td><td>October 31, 1993</td></tr>
+<tr><td>2.5.0</td><td>October 22, 1993</td></tr>
+
+<tr><td>2.4.5</td><td>June 20, 1993</td></tr>
+<tr><td>2.4.4</td><td>June 19, 1993</td></tr>
+<tr><td>2.4.3</td><td>June 1, 1993</td></tr>
+<tr><td>2.4.2</td><td>May 31, 1993</td></tr>
+<tr><td>2.4.1</td><td>May 26, 1993</td></tr>
+<tr><td>2.4.0</td><td>May 17, 1993</td></tr>
+
+<tr><td>2.3.3</td><td>December 26, 1992</td></tr>
+<tr><td>2.3.2</td><td>November 27, 1992</td></tr>
+<tr><td>2.3.1</td><td>November 1, 1992</td></tr>
+<tr><td>2.3</td><td>October 31, 1992</td></tr>
+
+<tr><td>2.2.2</td><td>June 14, 1992</td></tr>
+<tr><td>2.2.1</td><td>June 9, 1992</td></tr>
+<tr><td>2.2</td><td>June 8, 1992</td></tr>
+
+<tr><td>2.1</td><td>March 24, 1992</td></tr>
+
+<tr><td>2.0</td><td>February 22, 1992</td></tr>
+
+<tr><td>1.36</td><td>September 24, 1989</td></tr>
+<tr><td>1.35</td><td>April 26, 1989</td></tr>
+<tr><td>1.34</td><td>February 23, 1989</td></tr>
+<tr><td>1.33</td><td>February 1, 1989</td></tr>
+<tr><td>1.32</td><td>December 21, 1988</td></tr>
+<tr><td>1.31</td><td>November 19, 1988</td></tr>
+<tr><td>1.30</td><td>October 13, 1988</td></tr>
+<tr><td>1.29</td><td>October 6, 1988</td></tr>
+<tr><td>1.28</td><td>September 14, 1988</td></tr>
+<tr><td>1.27</td><td>September 5, 1988</td></tr>
+<tr><td>1.26</td><td>August 18, 1988</td></tr>
+<tr><td>1.25</td><td>August 3, 1988</td></tr>
+<tr><td>1.24</td><td>July 2, 1988</td></tr>
+<tr><td>1.23</td><td>June 26, 1988</td></tr>
+<tr><td>1.22</td><td>May 22, 1988</td></tr>
+<tr><td>1.21</td><td>May 1, 1988</td></tr>
+<tr><td>1.20</td><td>April 19, 1988</td></tr>
+<tr><td>1.19</td><td>March 29, 1988</td></tr>
+<tr><td>1.18</td><td>February 4, 1988</td></tr>
+<tr><td>1.17</td><td>January 9, 1988</td></tr>
+
 </table>
 
 </body>
