--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -106,6 +106,13 @@ Numbers in parens are EGCS release numbers. </p>
 
 <tr><td>2.0</td><td>February 22, 1992</td></tr>
 
+<tr><td>1.42</td><td>September 20, 1992</td></tr>
+<tr><td>1.41</td><td>August 27, 1992</td></tr>
+<tr><td>1.40</td><td>June 1, 1991</td></tr>
+<tr><td>1.39</td><td>January 16, 1991</td></tr>
+<tr><td>1.38</td><td>December 21, 1990</td></tr>
+<tr><td>1.37.1</td><td>February 21, 1990</td></tr>
+<tr><td>1.37</td><td>February 11, 1990</td></tr>
 <tr><td>1.36</td><td>September 24, 1989</td></tr>
 <tr><td>1.35</td><td>April 26, 1989</td></tr>
 <tr><td>1.34</td><td>February 23, 1989</td></tr>
