Link to new BP page

--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -11,6 +11,9 @@
 to do with the optimizer.  Some are old ideas which might not help
 very much anymore, but who knows?
 
+<p>There is a separate page for <a
+href="proj-bp.html">Bounds Checking with Bounded Pointers</a>.
+
 <p>There is a separate project list for the <a
 href="proj-cpplib.html">C preprocessor</a>.
 
@@ -61,7 +64,7 @@ starting any serious haifa work)
   existing ports have been tuned to deal with the old scheduler --
   they may need to be tuned to generate good schedules with haifa.
 </ul>
-  
+
 <h2>Improvements to global cse and partial redundancy elimination:</h2>
 
 <p>The current implementation of global cse uses partial redundancy
@@ -103,7 +106,7 @@ constants in a special section too.  But which one?
 <li>Optimize a sequence of if statements whose conditions are
 exclusive.
 
-<p>It is possible to optimize 
+<p>It is possible to optimize
 
 <pre>
 if (x == 1) ...;
@@ -381,7 +384,7 @@ within functions.  Some of the mechanisms for this already exist.
 
 <p>More extensions.
 
-<ul> 
+<ul>
 <li>Generated unique labels.  Have some way of generating distinct
 labels for use in extended asm statements.  I don't know what a good
 syntax would be.
@@ -446,14 +449,14 @@ example:
       </ol>
   <li> Tables of the characteristics of the target machines on which
        GCC is implemented.
-  <li> A priori restrictions on the values of characteristics of target 
+  <li> A priori restrictions on the values of characteristics of target
        machines, with special reference to those parts of the source code
        which entail those restrictions
       <ol type="i">
-	<li> restrictions on individual characteristics 
+	<li> restrictions on individual characteristics
         <li> restrictions involving relations between various characteristics
       </ol>
-  <li> The use of GCC as a cross-compiler 
+  <li> The use of GCC as a cross-compiler
       <ol type="i">
 	<li> cross-compilation to existing machines
 	<li> cross-compilation to non-existent machines
@@ -478,7 +481,7 @@ example:
   <li> Examples, with special reference to the underlying reasoning
   </ol>
 <li>   Uses of the file aux-output.c
-<li>   Specification of what constitutes correct performance of an 
+<li>   Specification of what constitutes correct performance of an
        implementation of GCC
   <ol type="A">
   <li> The components of GCC
@@ -517,7 +520,7 @@ example:
   <li> ... ditto for other components ...
   <li>
   </ol>
-<li>  Data types used by GCC, with special reference to restrictions not 
+<li>  Data types used by GCC, with special reference to restrictions not
       specified in the formal definition of the data type
 <li>  References to the literature for the algorithms used in GCC
 </ol>
